z-index fixed

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -44,6 +44,7 @@ body {
 		padding: clamp(2rem, 3vw, 4rem) 0;
 		position: sticky;
 		top: 0;
+		z-index: 2;
 
 		& > * {
 			grid-column: 2 / -2;
